fix: weather section overlaps search form

--- a/src/app/header/city-search/city-search.component.css
+++ b/src/app/header/city-search/city-search.component.css
@@ -14,6 +14,7 @@ input {
   padding: 0.7rem;
   color: #505050;
   background-color: #d4d4d4;
+  z-index: 1;
 }
 
 button[type="submit"] {
@@ -22,6 +23,8 @@ button[type="submit"] {
   color: #fff;
   padding: 0.7rem;
   cursor: pointer;
+  position: relative;
+  z-index: 1;
 }
 
 .autocomplete-items {
